{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 457,
  "lineage": "a8cf93ab-f3bc-932e-a628-b60a43acfeaa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09caece0b5f62127f",
            "arn": "arn:aws:ec2:us-east-1:160071257600:elastic-ip/eipalloc-09caece0b5f62127f",
            "association_id": "eipassoc-05381eed25add6c26",
            "domain": "vpc",
            "id": "eipalloc-09caece0b5f62127f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0be2ee9d1ad08dd1f",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-52-73-161-78.compute-1.amazonaws.com",
            "public_ip": "52.73.161.78",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094780d938e44e3a4",
            "arn": "arn:aws:ec2:us-east-1:160071257600:elastic-ip/eipalloc-094780d938e44e3a4",
            "association_id": "eipassoc-09f50587599b416e5",
            "domain": "vpc",
            "id": "eipalloc-094780d938e44e3a4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e348a8908b9f6adc",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-50-19-233-97.compute-1.amazonaws.com",
            "public_ip": "50.19.233.97",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf10cdf9fcd62d37",
            "arn": "arn:aws:ec2:us-east-1:160071257600:instance/i-0625a7c3fe449133c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0625a7c3fe449133c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026372ed2ef23e77b",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-18-234-234-30.compute-1.amazonaws.com",
            "public_ip": "18.234.234.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0548d77795946ff9f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-057f4b3df7229d0ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ce818d2b90b29fc",
            "tags": {
              "Name": " EC2-public"
            },
            "tags_all": {
              "Name": " EC2-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057f4b3df7229d0ae"
            ]
          },
          "dependencies": [
            "aws_key_pair.instance_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.pub",
            "aws_vpc.vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf10cdf9fcd62d37",
            "arn": "arn:aws:ec2:us-east-1:160071257600:instance/i-096fb12b257d9b86f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app_tier_instance_profil",
            "id": "i-096fb12b257d9b86f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3386ce61677eca4",
            "private_dns": "ip-10-0-2-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea9d97919a6752bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d11653e55fb79c24"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090c84bac8e7c060a",
            "tags": {
              "Name": " app-tier2"
            },
            "tags_all": {
              "Name": " app-tier2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d11653e55fb79c24"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app-instance-profile",
            "aws_iam_role.app-tier-role",
            "aws_key_pair.instance_key",
            "aws_security_group.ALB_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.webserver_sg",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2p2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf10cdf9fcd62d37",
            "arn": "arn:aws:ec2:us-east-1:160071257600:instance/i-0daae733a5f44a52e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app_tier_instance_profil",
            "id": "i-0daae733a5f44a52e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0438f8aeec61fac25",
            "private_dns": "ip-10-0-3-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096732516a2a61a46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d11653e55fb79c24"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8ef6016bf7f363f",
            "tags": {
              "Name": " app-tier1"
            },
            "tags_all": {
              "Name": " app-tier1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d11653e55fb79c24"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app-instance-profile",
            "aws_iam_role.app-tier-role",
            "aws_key_pair.instance_key",
            "aws_security_group.ALB_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.webserver_sg",
            "aws_subnet.private2",
            "aws_vpc.vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:internet-gateway/igw-04f1fde31b543e77c",
            "id": "igw-04f1fde31b543e77c",
            "owner_id": "160071257600",
            "tags": {
              "Name": "VPC-A-IGW"
            },
            "tags_all": {
              "Name": "VPC-A-IGW"
            },
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:160071257600:loadbalancer/app/ALB/1340a163583dbbe3",
            "arn_suffix": "app/ALB/1340a163583dbbe3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-21385254.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:160071257600:loadbalancer/app/ALB/1340a163583dbbe3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5c477834eba000f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ce818d2b90b29fc"
              },
              {
                "subnet_id": "subnet-0b104ae438dc276f5"
              }
            ],
            "subnets": [
              "subnet-05ce818d2b90b29fc",
              "subnet-0b104ae438dc276f5"
            ],
            "tags": {
              "Name": "ALB",
              "task": "ALB"
            },
            "tags_all": {
              "Name": "ALB",
              "task": "ALB"
            },
            "vpc_id": "vpc-0a31f5e70b944f691",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ALB_sg",
            "aws_subnet.pub",
            "aws_subnet.pub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:160071257600:listener/app/ALB/1340a163583dbbe3/f3f286534fc58b53",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:160071257600:targetgroup/alb-tg/b56d4888d04724fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:160071257600:listener/app/ALB/1340a163583dbbe3/f3f286534fc58b53",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:160071257600:loadbalancer/app/ALB/1340a163583dbbe3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.ALB_sg",
            "aws_subnet.pub",
            "aws_subnet.pub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:160071257600:targetgroup/alb-tg/b56d4888d04724fd",
            "arn_suffix": "targetgroup/alb-tg/b56d4888d04724fd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:160071257600:targetgroup/alb-tg/b56d4888d04724fd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:160071257600:loadbalancer/app/ALB/1340a163583dbbe3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_to_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:160071257600:targetgroup/alb-tg/b56d4888d04724fd-20240710134613493500000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:160071257600:targetgroup/alb-tg/b56d4888d04724fd",
            "target_id": "i-096fb12b257d9b86f"
          },
          "dependencies": [
            "aws_iam_instance_profile.app-instance-profile",
            "aws_iam_role.app-tier-role",
            "aws_instance.ec2p",
            "aws_key_pair.instance_key",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.ALB_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.webserver_sg",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_to_tg_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:160071257600:targetgroup/alb-tg/b56d4888d04724fd-20240710134612921300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:160071257600:targetgroup/alb-tg/b56d4888d04724fd",
            "target_id": "i-0daae733a5f44a52e"
          },
          "dependencies": [
            "aws_iam_instance_profile.app-instance-profile",
            "aws_iam_role.app-tier-role",
            "aws_instance.ec2p2",
            "aws_key_pair.instance_key",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.ALB_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.webserver_sg",
            "aws_subnet.private2",
            "aws_vpc.vpc",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09caece0b5f62127f",
            "association_id": "eipassoc-05381eed25add6c26",
            "connectivity_type": "public",
            "id": "nat-097f4a9920e79d607",
            "network_interface_id": "eni-0be2ee9d1ad08dd1f",
            "private_ip": "10.0.0.100",
            "public_ip": "52.73.161.78",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ce818d2b90b29fc",
            "tags": {
              "Name": "NGW"
            },
            "tags_all": {
              "Name": "NGW"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094780d938e44e3a4",
            "association_id": "eipassoc-09f50587599b416e5",
            "connectivity_type": "public",
            "id": "nat-0539314a1a1ad5400",
            "network_interface_id": "eni-0e348a8908b9f6adc",
            "private_ip": "10.0.1.21",
            "public_ip": "50.19.233.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b104ae438dc276f5",
            "tags": {
              "Name": "NGW2"
            },
            "tags_all": {
              "Name": "NGW2"
            }
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_subnet.pub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:route-table/rtb-049859e3945d7a6a2",
            "id": "rtb-049859e3945d7a6a2",
            "owner_id": "160071257600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f1fde31b543e77c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-A-Public-RT"
            },
            "tags_all": {
              "Name": "VPC-A-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:route-table/rtb-0817107c01f065f56",
            "id": "rtb-0817107c01f065f56",
            "owner_id": "160071257600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-097f4a9920e79d607",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-A-Private-RT-New"
            },
            "tags_all": {
              "Name": "VPC-A-Private-RT-New"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.pub",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:route-table/rtb-0646075c5d0130711",
            "id": "rtb-0646075c5d0130711",
            "owner_id": "160071257600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0539314a1a1ad5400",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-A-Private-RT-New2"
            },
            "tags_all": {
              "Name": "VPC-A-Private-RT-New2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.ngw2",
            "aws_subnet.pub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0395632e74643332d",
            "route_table_id": "rtb-049859e3945d7a6a2",
            "subnet_id": "subnet-05ce818d2b90b29fc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.pub",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0567b7985f6bb3b2c",
            "route_table_id": "rtb-049859e3945d7a6a2",
            "subnet_id": "subnet-0b104ae438dc276f5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.pub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f471acff6baaf9a6",
            "route_table_id": "rtb-0817107c01f065f56",
            "subnet_id": "subnet-090c84bac8e7c060a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt2private",
            "aws_subnet.private",
            "aws_subnet.pub",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1p2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c82cc4518ded82ab",
            "route_table_id": "rtb-0646075c5d0130711",
            "subnet_id": "subnet-0c8ef6016bf7f363f"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.rt2private2",
            "aws_subnet.private2",
            "aws_subnet.pub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1p3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aedc59b40fa470a",
            "route_table_id": "rtb-0817107c01f065f56",
            "subnet_id": "subnet-0a6ff0a2b9b8f8ee6"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt2private",
            "aws_subnet.private3",
            "aws_subnet.pub",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1p4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018008a4f3b1edd5d",
            "route_table_id": "rtb-0646075c5d0130711",
            "subnet_id": "subnet-065b17253670f596d"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.rt2private2",
            "aws_subnet.private4",
            "aws_subnet.pub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:security-group/sg-0c5c477834eba000f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5c477834eba000f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240708061130387200000003",
            "name_prefix": "terraform-",
            "owner_id": "160071257600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EFS_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:security-group/sg-0a7d93c9facfa882e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7d93c9facfa882e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d11653e55fb79c24"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057f4b3df7229d0ae"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240708061139598500000007",
            "name_prefix": "terraform-",
            "owner_id": "160071257600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS-sg"
            },
            "tags_all": {
              "Name": "EFS-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:security-group/sg-0423197bb698bdc89",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0423197bb698bdc89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d11653e55fb79c24"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240708061139589300000006",
            "name_prefix": "terraform-",
            "owner_id": "160071257600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.webserver_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:security-group/sg-057f4b3df7229d0ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057f4b3df7229d0ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240708061130386400000002",
            "name_prefix": "terraform-",
            "owner_id": "160071257600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:security-group/sg-0d11653e55fb79c24",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d11653e55fb79c24",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057f4b3df7229d0ae"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5c477834eba000f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5c477834eba000f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240708061135462600000005",
            "name_prefix": "terraform-",
            "owner_id": "160071257600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:subnet/subnet-090c84bac8e7c060a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090c84bac8e7c060a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Private"
            },
            "tags_all": {
              "Name": "VPC-A-Private"
            },
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:subnet/subnet-0c8ef6016bf7f363f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8ef6016bf7f363f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Private2"
            },
            "tags_all": {
              "Name": "VPC-A-Private2"
            },
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:subnet/subnet-0a6ff0a2b9b8f8ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6ff0a2b9b8f8ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Private3"
            },
            "tags_all": {
              "Name": "VPC-A-Private3"
            },
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:subnet/subnet-065b17253670f596d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065b17253670f596d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Private4"
            },
            "tags_all": {
              "Name": "VPC-A-Private4"
            },
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:subnet/subnet-05ce818d2b90b29fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce818d2b90b29fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Public"
            },
            "tags_all": {
              "Name": "VPC-A-Public"
            },
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:subnet/subnet-0b104ae438dc276f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b104ae438dc276f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Public2"
            },
            "tags_all": {
              "Name": "VPC-A-Public2"
            },
            "vpc_id": "vpc-0a31f5e70b944f691"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160071257600:vpc/vpc-0a31f5e70b944f691",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01fe5e5a581aa4b5c",
            "default_route_table_id": "rtb-0361892652e5d6931",
            "default_security_group_id": "sg-0842d96b94c7d91c7",
            "dhcp_options_id": "dopt-0b4b7db03a4d1e2de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a31f5e70b944f691",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0361892652e5d6931",
            "owner_id": "160071257600",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            }
          }
        }
      ]
    }
  ]
}